examples/test/testpolicy14370.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14370
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key22: value24
      key6: value29
      key34: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value3
          key23: value13
      podSelector:
        matchLabels:
          key38: value46
          key27: value49
          key11: value42
